tests/ui/static/issue-18118.rs
pub fn main() {
    const z: &'static isize = {
        let p = 3;
        &p //~ ERROR `p` does not live long enough
    };
}
